src/objects/LeanData__Round_Robin_Grouping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>LeanData__Capping_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cap Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Capping_Frequency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Capping Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Capping_Reset__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Capping Reset</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Current_Order_Position__c</fullName>
        <label>Current Order Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Current_Weight_Value__c</fullName>
        <label>Current Weight Value</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Grouping_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Grouping Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Manual_Next_OwnerId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OwnerId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Object_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Weighting_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Weighting Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>RoundRobinGrouping</label>
</CustomObject>